set02/problem06errorlogs.txt
problem06.c: In function 'str_reverse':
problem06.c:30:1: error: expected declaration or statement at end of input
 }
 ^